--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -1,21 +1,65 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Tags</th>
-            <th>NumberOfQuestions</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let question of questions">
-            <td>{{question.title}}</td>
-            <td>{{question.mainTags | json}}</td>
-            <td>{{question.questionsInTag}}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="row pt-1" *ngFor="let question of questions">
+    <div class="col-md-12">
+        <h3><a href="https://meta.stackoverflow.com/questions/{{question.id}}">{{question.title}}</a></h3>
+        <div class="tags">
+            <div *ngFor="let tag of question.mainTags" class="mt-3" [class.tag-rejected]="tag.status === 'Rejected'">
+                <div class="row tag-header">
+                    <div class="col-3">
+                        <p class="post-tag">{{tag.tagName}}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        Number of questions:
+                    </div>
+                    <div class="col-md-10">
+                        {{tag.numQuestions}}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        Type:
+                    </div>
+                    <div class="col-md-10">
+                        {{tag.type}}
 
-<nav>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2">
+                        Status:
+                    </div>
+                    <div class="col-md-10">
+                        {{tag.status}}
+                    </div>
+                </div>
+
+                <div class="row mt-2">
+                    <div class="col-md-2">
+                        Set type
+                    </div>
+                    <div class="col-md-10">
+                        <a *ngIf="tag.status !== 'Burninate'" href="javascript:void">Burninate</a> |
+                        <a *ngIf="tag.status !== 'Synonym'" href="javascript:void">Synonym</a> |
+                        <a *ngIf="tag.status !== 'Merge'" href="javascript:void">Merge</a>
+                    </div>
+                </div>
+
+                <div class="row mt-2">
+                    <div class="col-md-2">
+                    </div>
+                    <div class="col-md-10">
+                        <a *ngIf="tag.status !== 'Approved'" href="javascript:void">Approve Tag</a> |
+                        <a *ngIf="tag.status !== 'Rejected'" href="javascript:void">Reject Tag</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr />
+    </div>
+</div>
+
+<nav style="margin-top: 20px;">
     <ul class="pagination">
         <li class="page-item" [class.disabled]="page.Disabled" [class.active]="page.Active" *ngFor="let page of pagingInfo">
             <a class="page-link" (click)="loadPage(page.Number)" href="javascript:void(0);">{{page.Name}}</a>
