--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -1,12 +1,13 @@
 <div class="row pt-1" *ngFor="let question of questions">
     <div class="col-md-12">
-        <h3><a href="https://meta.stackoverflow.com/questions/{{question.id}}">{{question.title}}</a></h3>
+        <h3><a routerLink="/questions/{{question.id}}">{{question.title}}</a></h3>
+        <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
         <div class="tags">
             <div *ngFor="let tag of question.mainTags" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="row pb-3">
-                            <div class="col-3">
+                            <div class="col">
                                 <p class="post-tag">{{tag.tagName}}</p>
                             </div>
                         </div>
@@ -28,7 +29,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6">
-                                Status:
+                                Approval Status:
                             </div>
                             <div class="col-md-6">
                                 {{tag.status}}
@@ -54,7 +55,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <a *ngIf="tag.status !== 'Approved'" href="javascript:void">Approve Tag</a>
-                                    <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'"> </span>
+                                    <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
                                     <a *ngIf="tag.status !== 'Rejected'" href="javascript:void">Reject Tag</a>
                                 </div>
                             </div>
