--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,67 @@
+<form style="padding: 10px" #filterForm="ngForm">
+    <div class="form-row align-items-center mb-2">
+        <div class="col">
+            <input type="text" class="form-control" id="contentInput" placeholder="Tag" name="tag" [(ngModel)]="filter.tag"
+                #tag="ngModel">
+        </div>
+        <div class="col">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="approvalStatusSelector">Approval Status</label>
+                </div>
+                <select class="custom-select" id="approvalStatusSelector" [(ngModel)]="filter.approvalStatus"
+                    [ngModelOptions]="{standalone: true}">
+                    <option value="-1">Any</option>
+                    <option value="2">Approved</option>
+                    <option value="3">Rejected</option>
+                    <option value="1">Pending</option>
+                </select>
+            </div>
+        </div>
+        <div class="col">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="statusSelector">Status</label>
+                </div>
+                <select class="custom-select" id="statusSelector" [(ngModel)]="filter.status" [ngModelOptions]="{standalone: true}">
+                    <option value="">Any</option>
+                    <option value="none">None</option>
+                    <option value="status-completed">Completed</option>
+                    <option value="status-planned">Planned</option>
+                    <option value="status-declined">Declined</option>
+                </select>
+            </div>
+        </div>
+        <div class="col">
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <label class="input-group-text" for="sortBySelector">Sort By</label>
+                </div>
+                <select class="custom-select" id="sortBySelector" [(ngModel)]="filter.sortBy" [ngModelOptions]="{standalone: true}">
+                    <option value="score">Score</option>
+                    <option value="numQuestions"># of Questions</option>
+                </select>
+            </div>
+        </div>
+        <div class="col">
+            <button type="submit" class="btn btn-primary" (click)="reloadData()">Search</button>
+        </div>
+    </div>
+</form>
+
 <div class="row pt-1" *ngFor="let question of questions">
     <div class="col-md-12">
-        <h3><a routerLink="/questions/{{question.id}}">{{question.title}}</a></h3>
+        <!-- <h3><a routerLink="/questions/{{question.id}}">{{question.title}}</a></h3> -->
+        <h3><a >{{question.title}}</a></h3>
         <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
+        <div class="row">
+            <div class="col-md-3">
+                Score:
+            </div>
+            <div class="col-md-3">
+                {{question.score}}
+            </div>
+        </div>
         <div class="tags">
             <div *ngFor="let tag of question.mainTags" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
                 <div class="row">
@@ -11,7 +71,7 @@
                                 <p class="post-tag">{{tag.tagName}}</p>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row" *ngIf="tag.numQuestions">
                             <div class="col-md-6">
                                 Number of questions:
                             </div>
@@ -54,15 +114,15 @@
                                 <div class="col-md-6">
                                 </div>
                                 <div class="col-md-6">
-                                    <a *ngIf="tag.status !== 'Approved'" href="javascript:void">Approve Tag</a>
+                                    <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, true)">Approve Tag</a>
                                     <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
-                                    <a *ngIf="tag.status !== 'Rejected'" href="javascript:void">Reject Tag</a>
+                                    <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, false)">Reject Tag</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6" *ngIf="tag.questionCountOverTime.length">
-                        <app-question-count-graph [thing]="tag.questionCountOverTime">
+                        <app-question-count-graph [data]="tag.questionCountOverTime">
 
                         </app-question-count-graph>
                     </div>
