Add colours for approved/pending statuses. Add consistent sorting for tags. Add deploy step

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -91,7 +91,10 @@
                             <div class="col-md-6">
                                 Approval Status:
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" 
+                                [class.tag-approved]="tag.status==='Approved'"
+                                [class.tag-pending]="tag.status==='Pending'"
+                            >
                                 {{tag.status}}
                             </div>
                         </div>
