--- a/Rodgort/ClientApp/src/app/home/home.component.scss
+++ b/Rodgort/ClientApp/src/app/home/home.component.scss
@@ -31,3 +31,11 @@
 .tag-rejected {
     background-color: #f1c0c0;
 }
+
+.tag-approved {
+    background-color: #a8f1a8;
+}
+
+.tag-pending {
+    background-color: #f3bb84;
+}
