Store search in browser url

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="col">
-            <button type="submit" class="btn btn-primary" (click)="reloadData()">Search</button>
+            <button type="submit" class="btn btn-primary" (click)="applyFilter()">Search</button>
         </div>
     </div>
 </form>
