--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -65,91 +65,97 @@
     </div>
 </form>
 
-<div class="row pt-1" *ngFor="let question of questions">
-    <div class="col-md-12">
-        <!-- <h3><a routerLink="/questions/{{question.id}}">{{question.title}}</a></h3> -->
-        <h3><a>{{question.title}}</a></h3>
-        <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
-        <div class="row">
-            <div class="col-md-3">
-                Score:
+<img *ngIf="loading" class="spinner" src="../../assets/spinner.png">
+
+<ng-container *ngIf="!loading">
+    <div class="row pt-1" *ngFor="let question of questions">
+        <div class="col-md-12">
+            <!-- <h3><a routerLink="/questions/{{question.id}}">{{question.title}}</a></h3> -->
+            <h3><a>{{question.title}}</a></h3>
+            <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
+            <div class="row">
+                <div class="col-md-3">
+                    Score:
+                </div>
+                <div class="col-md-3">
+                    {{question.score}}
+                </div>
             </div>
-            <div class="col-md-3">
-                {{question.score}}
-            </div>
-        </div>
-        <div class="tags">
-            <div *ngFor="let tag of question.mainTags" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="row pb-3">
-                            <div class="col">
-                                <p class="post-tag">{{tag.tagName}}</p>
+            <div class="tags">
+                <div *ngFor="let tag of question.mainTags" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="row pb-3">
+                                <div class="col">
+                                    <p class="post-tag">{{tag.tagName}}</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row" *ngIf="tag.numQuestions">
-                            <div class="col-md-6">
-                                Number of questions:
-                            </div>
-                            <div class="col-md-6">
-                                {{tag.numQuestions}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                Type
-                            </div>
-                            <div class="col-md-6">
-                                {{tag.type}}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                Approval Status <img width="15px" height="15px" src="../../assets/questionmark.jpeg" title="Approved: The tag is relevant to the request. Rejected: The tag is not relevant to the request.">
-                            </div>
-                            <div class="col-md-6" [class.tag-approved]="tag.status==='Approved'" [class.tag-pending]="tag.status==='Pending'">
-                                {{tag.status}}
-                            </div>
-                        </div>
-
-                        <div *ngIf="isAdmin">
-                            <div class="row mt-2">
+                            <div class="row" *ngIf="tag.numQuestions">
                                 <div class="col-md-6">
-                                    Admin
+                                    Number of questions:
                                 </div>
                                 <div class="col-md-6">
-                                    <a *ngIf="tag.type !== 'Burninate'" href="javascript:void">Burninate</a>
-                                    <span *ngIf="tag.type !== 'Burninate' && tag.type !== 'Synonym'">|</span>
-                                    <a *ngIf="tag.type !== 'Synonym'" href="javascript:void">Synonym</a>
-                                    <span *ngIf="tag.type !== 'Synonym' && tag.type !== 'Merge'">|</span>
-                                    <a *ngIf="tag.type !== 'Merge'" href="javascript:void">Merge</a>
+                                    {{tag.numQuestions}}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    Type
+                                </div>
+                                <div class="col-md-6">
+                                    {{tag.type}}
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-6">
+                                    Approval Status <img width="15px" height="15px" src="../../assets/questionmark.jpeg"
+                                        title="Approved: The tag is relevant to the request. Rejected: The tag is not relevant to the request.">
+                                </div>
+                                <div class="col-md-6" [class.tag-approved]="tag.status==='Approved'"
+                                    [class.tag-pending]="tag.status==='Pending'">
+                                    {{tag.status}}
                                 </div>
                             </div>
 
-                            <div class="row mt-2">
-                                <div class="col-md-6">
+                            <div *ngIf="isAdmin">
+                                <div class="row mt-2">
+                                    <div class="col-md-6">
+                                        Admin
+                                    </div>
+                                    <div class="col-md-6">
+                                        <a *ngIf="tag.type !== 'Burninate'" href="javascript:void">Burninate</a>
+                                        <span *ngIf="tag.type !== 'Burninate' && tag.type !== 'Synonym'">|</span>
+                                        <a *ngIf="tag.type !== 'Synonym'" href="javascript:void">Synonym</a>
+                                        <span *ngIf="tag.type !== 'Synonym' && tag.type !== 'Merge'">|</span>
+                                        <a *ngIf="tag.type !== 'Merge'" href="javascript:void">Merge</a>
+                                    </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, true)">Approve
-                                        Tag</a>
-                                    <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
-                                    <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, false)">Reject
-                                        Tag</a>
+
+                                <div class="row mt-2">
+                                    <div class="col-md-6">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, true)">Approve
+                                            Tag</a>
+                                        <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
+                                        <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, false)">Reject
+                                            Tag</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-6" *ngIf="tag.questionCountOverTime.length">
-                        <app-question-count-graph [data]="tag.questionCountOverTime">
+                        <div class="col-md-6" *ngIf="tag.questionCountOverTime.length">
+                            <app-question-count-graph [data]="tag.questionCountOverTime">
 
-                        </app-question-count-graph>
+                            </app-question-count-graph>
+                        </div>
                     </div>
                 </div>
             </div>
+            <hr />
         </div>
-        <hr />
     </div>
-</div>
+</ng-container>
 
 <nav style="margin-top: 20px;">
     <ul class="pagination">
