--- a/Rodgort/ClientApp/src/app/home/home.component.scss
+++ b/Rodgort/ClientApp/src/app/home/home.component.scss
@@ -39,3 +39,12 @@
 .tag-pending {
     background-color: #f3bb84;
 }
+
+.spinner {
+    -webkit-animation:spin 1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
