#1 - Make changes on client side after sending the request to the server, rather than reloading the page

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -135,10 +135,10 @@
                                     <div class="col-md-6">
                                     </div>
                                     <div class="col-md-6">
-                                        <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, true)">Approve
+                                        <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, true)">Approve
                                             Tag</a>
                                         <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
-                                        <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag.tagName, false)">Reject
+                                        <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, false)">Reject
                                             Tag</a>
                                     </div>
                                 </div>
