--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -61,6 +61,11 @@
         </div>
         <div class="col">
             <button type="submit" class="btn btn-primary" (click)="applyFilter()">Search</button>
+
+            <div class="pull-right">
+                <input type="checkbox" id="chkShowRejectedTags" [(ngModel)]="showRejectedTags" [ngModelOptions]="{standalone: true}" />
+                <label for="chkShowRejectedTags">Show rejected tags</label>
+            </div>
         </div>
     </div>
 </form>
@@ -82,75 +87,77 @@
                 </div>
             </div>
             <div class="tags">
-                <div *ngFor="let tag of question.mainTags" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="row pb-3">
-                                <div class="col">
-                                    <p class="post-tag">{{tag.tagName}}</p>
+                <ng-container *ngFor="let tag of question.mainTags">
+                    <div *ngIf="showRejectedTags || tag.status !== 'Rejected'" class="mt-3 p-2" [class.tag-rejected]="tag.status === 'Rejected'">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="row pb-3">
+                                    <div class="col">
+                                        <p class="post-tag">{{tag.tagName}}</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row" *ngIf="tag.numQuestions">
-                                <div class="col-md-6">
-                                    Number of questions:
-                                </div>
-                                <div class="col-md-6">
-                                    {{tag.numQuestions}}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    Type
-                                </div>
-                                <div class="col-md-6">
-                                    {{tag.type}}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    Approval Status <img width="15px" height="15px" src="../../assets/questionmark.jpeg"
-                                        title="Approved: The tag is relevant to the request. Rejected: The tag is not relevant to the request.">
-                                </div>
-                                <div class="col-md-6" [class.tag-approved]="tag.status==='Approved'"
-                                    [class.tag-pending]="tag.status==='Pending'">
-                                    {{tag.status}}
-                                </div>
-                            </div>
-
-                            <div *ngIf="isAdmin">
-                                <div class="row mt-2">
+                                <div class="row" *ngIf="tag.numQuestions">
                                     <div class="col-md-6">
-                                        Admin
+                                        Number of questions:
                                     </div>
                                     <div class="col-md-6">
-                                        <a *ngIf="tag.type !== 'Burninate'" href="javascript:void">Burninate</a>
-                                        <span *ngIf="tag.type !== 'Burninate' && tag.type !== 'Synonym'">|</span>
-                                        <a *ngIf="tag.type !== 'Synonym'" href="javascript:void">Synonym</a>
-                                        <span *ngIf="tag.type !== 'Synonym' && tag.type !== 'Merge'">|</span>
-                                        <a *ngIf="tag.type !== 'Merge'" href="javascript:void">Merge</a>
+                                        {{tag.numQuestions}}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        Type
+                                    </div>
+                                    <div class="col-md-6">
+                                        {{tag.type}}
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        Approval Status <img width="15px" height="15px" src="../../assets/questionmark.jpeg"
+                                            title="Approved: The tag is relevant to the request. Rejected: The tag is not relevant to the request.">
+                                    </div>
+                                    <div class="col-md-6" [class.tag-approved]="tag.status==='Approved'"
+                                        [class.tag-pending]="tag.status==='Pending'">
+                                        {{tag.status}}
                                     </div>
                                 </div>
 
-                                <div class="row mt-2">
-                                    <div class="col-md-6">
+                                <div *ngIf="isAdmin">
+                                    <div class="row mt-2">
+                                        <div class="col-md-6">
+                                            Admin
+                                        </div>
+                                        <div class="col-md-6">
+                                            <a *ngIf="tag.type !== 'Burninate'" href="javascript:void">Burninate</a>
+                                            <span *ngIf="tag.type !== 'Burninate' && tag.type !== 'Synonym'">|</span>
+                                            <a *ngIf="tag.type !== 'Synonym'" href="javascript:void">Synonym</a>
+                                            <span *ngIf="tag.type !== 'Synonym' && tag.type !== 'Merge'">|</span>
+                                            <a *ngIf="tag.type !== 'Merge'" href="javascript:void">Merge</a>
+                                        </div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, true)">Approve
-                                            Tag</a>
-                                        <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
-                                        <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, false)">Reject
-                                            Tag</a>
+
+                                    <div class="row mt-2">
+                                        <div class="col-md-6">
+                                        </div>
+                                        <div class="col-md-6">
+                                            <a *ngIf="tag.status !== 'Approved'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, true)">Approve
+                                                Tag</a>
+                                            <span *ngIf="tag.status !== 'Approved' && tag.status !== 'Rejected'">|</span>
+                                            <a *ngIf="tag.status !== 'Rejected'" href="javascript:void" (click)="setApprovalStatus(question.id, tag, false)">Reject
+                                                Tag</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6" *ngIf="tag.questionCountOverTime.length">
-                            <app-question-count-graph [data]="tag.questionCountOverTime">
+                            <div class="col-md-6" *ngIf="tag.questionCountOverTime.length">
+                                <app-question-count-graph [data]="tag.questionCountOverTime">
 
-                            </app-question-count-graph>
+                                </app-question-count-graph>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </ng-container>
             </div>
             <hr />
         </div>
