--- a/Rodgort/ClientApp/src/app/app.component.html
+++ b/Rodgort/ClientApp/src/app/app.component.html
@@ -9,18 +9,15 @@
           <ul class="navbar-nav mr-auto">
               <!-- <li class="nav-item">
                   <a class="nav-link" routerLink="/reports">Reports</a>
-              </li>
-              <li class="nav-item dropdown hidden-md-down" *ngIf="isAdmin || isBotOwner">
-                  <a class="nav-link dropdown-toggle" href="#" id="adminDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Admin
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="adminDropdownLink">
-                      <a *ngIf="isAdmin || isBotOwner" class="dropdown-item" routerLink="/admin/bots">Bots</a>
-                      <a *ngIf="isAdmin" class="dropdown-item" routerLink="/admin/users">Users</a>
-                  </div>
               </li> -->
-
-              
+              <li class="nav-item dropdown hidden-md-down">
+                    <a class="nav-link dropdown-toggle" href="#" id="adminDropdownLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Filters
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="adminDropdownLink">
+                        <a class="dropdown-item" routerLink="/" [queryParams]="{approvalStatus:1}">Needs Approval</a>
+                    </div>
+                </li>
           </ul>
 
           <div class="quota-display">Quota Remaining: {{quotaRemaining}}</div>
