--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -77,7 +77,7 @@
         <div class="col-md-12">
             <h3>
                 <a>{{question.title}}</a>
-                <p *ngFor="let metaTag of question.metaStatusTags" class="post-metatag">{{metaTag.tagName}}</p>
+                <p *ngFor="let metaTag of question.metaStatusTags" class="post-metatag"><a href="https://meta.stackoverflow.com/questions/tagged/{{metaTag.tagName}}">{{metaTag.tagName}}</a></p>
             </h3>
             <a href="https://meta.stackoverflow.com/questions/{{question.id}}">View on site</a>
             <div class="row">
@@ -95,7 +95,7 @@
                             <div class="col-md-6">
                                 <div class="row pb-3">
                                     <div class="col">
-                                        <p class="post-tag">{{tag.tagName}}</p>
+                                        <p class="post-tag"><a href="https://stackoverflow.com/questions/tagged/{{tag.tagName}}">{{tag.tagName}}</a></p>
                                     </div>
                                 </div>
                                 <div class="row" *ngIf="tag.numQuestions">
