Track featured requests as well.

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -41,6 +41,7 @@
                     <option value="none">None</option>
                     <option value="status-completed">Completed</option>
                     <option value="status-planned">Planned</option>
+                    <option value="featured">Featured</option>
                     <option value="status-declined">Declined</option>
                 </select>
             </div>
