Track question closures. Process queues more aggressively now that we're efficiently using api calls. Add statistics controller for home page

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -7,6 +7,8 @@
         </li>
         of which
         <ul>
+            <li><a routerLink="/requests" [queryParams]="{approvalStatus:2}">{{statistics.requests.requireApproval}} have an approved tag</a></li>
+            <li><a routerLink="/requests" [queryParams]="{approvalStatus:1}">{{statistics.requests.withApprovedTags}} require tag approval</a></li>
             <li><a routerLink="/requests" [queryParams]="{status:'status-declined'}">{{statistics.requests.declined}} were declined</a></li>
             <li><a routerLink="/requests" [queryParams]="{status:'status-completed'}">{{statistics.requests.completed}} were completed</a></li>
             <li><a routerLink="/requests" [queryParams]="{status:'status-completed', hasQuestions: 'yes'}">{{statistics.requests.completedWithQuestionsLeft}} are completed but still have approved tags with questions</a></li>
@@ -25,11 +27,4 @@
             <li>{{statistics.tags.hasQuestionsAndAttachedToCompletedRequest}} have questions despite being found on a status-completed request</li>
         </ul>
     </ul>
-</div>
-
-<div class="form-group row">
-    <label class="col-2 col-form-label">Text</label>
-    <div class="col-10">
-        <label class="col-2 col-form-label">More text!</label>
-    </div>
 </div>
