--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -43,6 +43,7 @@
                     <option value="status-planned">Planned</option>
                     <option value="featured">Featured</option>
                     <option value="status-declined">Declined</option>
+                    <option value="closed">Closed</option>
                 </select>
             </div>
         </div>
